# z2p

./: .dockerignore  Cargo.toml  Dockerfile  clippy.toml  rebuild.sh
.github/workflow/: audit.yml
.github/workflows/: audit.yml  ci.yml
configuration/: production.yaml
notes/: readme.md  todo.md
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: common.rs  health_check.rs  subscription_check.rs
