[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.8"
serde = { version = "1", features = ["derive"]}
syn = { version = "1.0", features = ["derive", "parsing", "printing"] }

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"

# [dependencies.sqlx]
# version = "0.5.7"
# default-features = false
# features = [
#     "runtime-actix-rustls", 
#     "macros", 
#     "postgres", 
#     "uuid", 
#     "chrono", 
#     "migrate"
# ]