[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.115", features = ["derive"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

[dev-dependencies]
actix-rt = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = "1"

# [dependencies.sqlx]
# version = "0.5.7"
# default-features = false
# features = [
#     "runtime-actix-rustls", 
#     "macros", 
#     "postgres", 
#     "uuid", 
#     "chrono", 
#     "migrate"
# ]
